k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-dashboard
  namespace: user-mascret
spec:
  selector:
    app: f1-dashboard
  ports:
    - port: 80
      targetPort: 8050
